[package]
name = "config_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ipipe = "0.11.7"
num-derive = "0.4"
num = "0.4"
num-traits = "0.2.19"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]